--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ permalink: /
 </div>
 </section>
 
-<!-- Service Start -->
+<!-- Values Start -->
 <section id="service">
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>Our Services</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+        <h2>Our Values</h2>
+        <p>We pride ourselves on providing opporunities for enhancing leadership skills at all levels of participation.  Our main focuses are:</p>
       </div>
     </div>
     <div class="row ">
