--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ permalink: /
     </div>
   </div>
 </section>
-<!-- Content Start -->
+<!-- Content Start
 <section id="testimonial">
   <div class="container">
     <div class="row">
@@ -151,4 +151,4 @@ permalink: /
       </div>
     </div>
   </div>
-</section>
+</section> -->
