--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@ permalink: /
       <div class="row ">
           <div class="col-lg-4 col-md-6 text-center">
               <div class="service-box">
-                  <i class="fa-lightbulb-o"></i>
+                  <i class="fa fa-4x fa-lightbulb-o"></i>
                   <h3>Excellent Engineering</h3>
                   <p class="text-muted">Every problem has a solution.</p>
               </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
               <div class="service-box">
-                  <i class="fa-users" data-wow-delay=".1s"></i>
+                  <i class="fa fa-4x fa-users" data-wow-delay=".1s"></i>
                   <h3>Effetive Teamwork</h3>
                   <p class="text-muted">No engineer left behind!</p>
               </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
               <div class="service-box">
-                  <i class="fa-comments" data-wow-delay=".2s"></i>
+                  <i class="fa fa-4x fa-comments" data-wow-delay=".2s"></i>
                   <h3>Clear Communication</h3>
                   <p class="text-muted">Not just for English majors.</p>
               </div>
