--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <h2>We are looking for new team members!</h2>
+          <p>If you've liked what you've seen, and you're interested in learning more about joining the DBF Team, click below to fill out a quick application and someone on the team will reach out to you shortly.</p>
+          <a class="btn btn-default btn-call-to-action" href="#" >APPLY NOW!</a>
         </div>
       </div>
     </div>
