--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Our Work
-permalink: /work/
+title: Our Sub-team Specialties
+permalink: /teams/
 ---
 
     <!-- Slider Start -->
