--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ permalink: /
             <h2>About Us</h2>
             <p></p>
           </div>
-          <p>Our full name is: The Brigham Young Univeristy Aeronautics Club American Institute of Aeronautics and Astronautics Design Build Fly Competition Team.  We are a subset of the BYU Aeronautics Club that participate in the AIAA DBF competition each year.  Our team is a great place to get involved in all aspects of small fixed-wing UAV design, manufacture, and piloting.</p>
+          <p>Our full name is: The Brigham Young Univeristy Aeronautics Club American Institute of Aeronautics and Astronautics Design Build Fly Competition Team.  We are a subset of the <a href="https://aeronautics.byu.edu/">BYU Aeronautics Club</a> that participates in the <a href="https://www.aiaa.org/dbf/">AIAA DBF competition</a> each year.  Our team is a great place to get involved in all aspects of small fixed-wing UAV design, manufacture, and piloting; not to mention a great addition to your resume.</p>
         </div>
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
@@ -79,11 +79,11 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS</h2>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <a href="#" class="btn btn-view-works">View Works</a>
+      <h2>WE DO IT ALL</h2>
+      <p>When we say all aspects of small fixed-wing UAVs, we mean it.  We've got aerodynamics, structures, manufacturing, graphics, propulsion, electronics, systems, piloting, and more!</p>
+      <p>With so much going on, it's hard to keep track, which is why we implement a leadership structure that includes a variety of sub teams. Each year we make small modificiations to the overall team structure depending on specific needs and challenges for the year's competition, but overall we keep things in the same few divisions.</p>
+      <p>Take a gander and the various sub team specialties we have on the team, we're sure you'll find something that peaks your interest.</p>
+      <a href="{{ site.baseurl }}/teams" class="btn btn-view-works">View Specialties</a>
     </div>
   </div>
 </div>
