--- a/teams.html
+++ b/teams.html
@@ -10,8 +10,8 @@ permalink: /teams/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <h1>Sub-team Specialties</h1>
+                    <p>Take a gander at some of the things our sub-teams do!</p>
                 </div>
             </div>
         </div>
@@ -26,16 +26,18 @@ permalink: /teams/
               <div class="portfolio-menu">
                 <ul>
                     <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".Leadership">Leadership</li>
+                    <li class="filter" data-filter=".Aerodynamics">Aerodynamics</li>
+                    <li class="filter" data-filter=".Graphics">Graphics</li>
+                    <li class="filter" data-filter=".Structures">Structures</li>
+                    <li class="filter" data-filter=".Propulsion">Propulsion</li>
+                    <li class="filter" data-filter=".Manufacturing">Manufacturing</li>
+                    <li class="filter" data-filter=".Systems">Systems</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix Leadership">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -47,7 +49,7 @@ permalink: /teams/
                         </div>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix Aerodynamics">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
@@ -59,7 +61,7 @@ permalink: /teams/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Graphics">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
@@ -72,7 +74,7 @@ permalink: /teams/
 
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix Structures">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -84,7 +86,7 @@ permalink: /teams/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Video">
+                  <li class="mix Propulsion">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
@@ -96,7 +98,31 @@ permalink: /teams/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Manufacturing">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix Systems">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Tesla Motors</h2>
+                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="mix Graphics">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
@@ -116,7 +142,7 @@ permalink: /teams/
     </div>
 </section>
 
-<!-- Clients Logo Section Start -->
+<!-- Clients Logo Section Start
 <section id="clients-logo-section">
   <div class="container">
     <div class="row">
@@ -164,20 +190,20 @@ permalink: /teams/
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- Call to action Start -->
 <section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="block">
+            <h2>We are looking for new team members!</h2>
+            <p>If you've liked what you've seen, and you're interested in learning more about joining the DBF Team, click below to fill out a quick application and someone on the team will reach out to you shortly.</p>
+            <a class="btn btn-default btn-call-to-action" href="#" >APPLY NOW!</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
