try fixing color again

--- a/teams.html
+++ b/teams.html
@@ -25,6 +25,7 @@ permalink: /teams/
             <div class="block">
               <div class="portfolio-menu">
                 <ul>
+                    <!-- Sub Teams -->
                     <li class="filter" data-filter="all">Everything</li>
                     <li class="filter" data-filter=".Leadership">Leadership</li>
                     <li class="filter" data-filter=".Aerodynamics">Aerodynamics</li>
@@ -37,102 +38,157 @@ permalink: /teams/
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Leadership">
+                  <!-- Leadership Pages -->
+                  <!-- Team Leads -->
+                  <li class="mix Leadership">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Current Team Leads</h2>
+                          <p>Get to know some of our current team leads.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Meetings -->
+                  <li class="mix Leadership">
+                      <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                          <div class="position-center">
+                          <h2>Meetings</h2>
+                          <p>Sometimes necessary, but usually not.</p>
+                          </div>
+                      </div>
+                      </a>
+                  </li>
+                  <!-- Communication -->
+                  <li class="mix Leadership">
+                      <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                          <div class="position-center">
+                          <h2>Communication</h2>
+                          <p>If you don't want meetings, communicate.</p>
+                          </div>
+                      </div>
+                      </a>
+                  </li>
+                  <!-- Management -->
+                  <li class="mix Leadership">
+                      <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                          <div class="position-center">
+                          <h2>Motivation</h2>
+                          <p>We want to be motivators, not managers.</p>
+                          </div>
+                      </div>
+                      </a>
+                  </li>
+                  <!-- Aero Pages -->
+                  <!-- Airfoil -->
+                  <li class="mix Leadership">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
-                            <h2>Tesla Motors</h2>
-                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                            <h2>Airfoil Analysis</h2>
+                            <p>Using XFoil to analyse and select airfoils.</p>
                           </div>
                         </div>
                       </a>
                   </li>
-                  <li class="mix Aerodynamics">
+                  <!-- XFLR5 -->
+                  <li class="mix Leadership">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                          <h2>Wing Analysis</h2>
+                          <p>Using XFLR5 and other tools to design wings and tails.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- XFLR5-2 -->
+                  <li class="mix Leadership">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Stability Analysis</h2>
+                          <p>Using XFLR5 and other tools to analyse stability of wings and tails.</p>
                         </div>
                       </div>
                     </a>
                   </li>
                   <li class="mix Graphics">
-                    <a href="#">
+                      <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
-                        <div class="position-center">
+                          <div class="position-center">
                           <h2>Tesla Motors</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
+                          </div>
                       </div>
-
-                    </a>
+                      </a>
                   </li>
                   <li class="mix Structures">
-                    <a href="#">
+                      <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
-                        <div class="position-center">
+                          <div class="position-center">
                           <h2>Tesla Motors</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
+                          </div>
                       </div>
-                    </a>
+                      </a>
                   </li>
                   <li class="mix Propulsion">
-                    <a href="#">
+                      <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
-                        <div class="position-center">
+                          <div class="position-center">
                           <h2>Tesla Motors</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
+                          </div>
                       </div>
-                    </a>
+                      </a>
                   </li>
                   <li class="mix Manufacturing">
-                    <a href="#">
+                      <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
-                        <div class="position-center">
+                          <div class="position-center">
                           <h2>Tesla Motors</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
+                          </div>
                       </div>
-                    </a>
+                      </a>
                   </li>
                   <li class="mix Systems">
-                    <a href="#">
+                      <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
-                        <div class="position-center">
+                          <div class="position-center">
                           <h2>Tesla Motors</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
+                          </div>
                       </div>
-                    </a>
+                      </a>
                   </li>
                   <li class="mix Graphics">
-                    <a href="#">
+                      <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
-                        <div class="position-center">
+                          <div class="position-center">
                           <h2>Tesla Motors</h2>
                           <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
+                          </div>
                       </div>
-                    </a>
+                      </a>
                   </li>
                 </ul>
               </div>
