--- a/teams.html
+++ b/teams.html
@@ -34,6 +34,7 @@ permalink: /teams/
                     <li class="filter" data-filter=".Propulsion">Propulsion</li>
                     <li class="filter" data-filter=".Manufacturing">Manufacturing</li>
                     <li class="filter" data-filter=".Systems">Systems</li>
+                    <li class="filter" data-filter=".Piloting">Systems</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
@@ -89,7 +90,7 @@ permalink: /teams/
                   </li>
                   <!-- Aero Pages -->
                   <!-- Airfoil -->
-                  <li class="mix Leadership">
+                  <li class="mix Aerodynamics">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -100,8 +101,8 @@ permalink: /teams/
                         </div>
                       </a>
                   </li>
-                  <!-- XFLR5 -->
-                  <li class="mix Leadership">
+                  <!-- Wing Design -->
+                  <li class="mix Aerodynamics">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                       <div class="overly">
@@ -112,8 +113,8 @@ permalink: /teams/
                       </div>
                     </a>
                   </li>
-                  <!-- XFLR5-2 -->
-                  <li class="mix Leadership">
+                  <!-- Stability Analysis -->
+                  <li class="mix Aerodynamics">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                       <div class="overly">
@@ -124,77 +125,282 @@ permalink: /teams/
                       </div>
                     </a>
                   </li>
+                  <!-- CFD -->
+                  <li class="mix Aerodynamics">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>CFD</h2>
+                          <p>Computational Fluid Dynamic analysis using STARCCM+ and other tools.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Wind Tunnel Testing -->
+                  <li class="mix Aerodynamics">
+                    <a href="#">
+                      <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
+                      <div class="overly">
+                        <div class="position-center">
+                          <h2>Wind Tunnel Testing</h2>
+                          <p>Using both big and small wind tunnels as needed.</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Graphics stuff -->
+                  <!-- Parts -->
                   <li class="mix Graphics">
                       <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
                           <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <h2>Part Modeling</h2>
+                          <p>Using CAD for parametric models.</p>
                           </div>
                       </div>
                       </a>
                   </li>
-                  <li class="mix Structures">
-                      <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
-                      <div class="overly">
-                          <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-                          </div>
-                      </div>
-                      </a>
-                  </li>
-                  <li class="mix Propulsion">
-                      <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
-                      <div class="overly">
-                          <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-                          </div>
-                      </div>
-                      </a>
-                  </li>
-                  <li class="mix Manufacturing">
-                      <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
-                      <div class="overly">
-                          <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-                          </div>
-                      </div>
-                      </a>
-                  </li>
-                  <li class="mix Systems">
-                      <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
-                      <div class="overly">
-                          <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-                          </div>
-                      </div>
-                      </a>
-                  </li>
+                  <!-- Assemblies -->
                   <li class="mix Graphics">
-                      <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
-                      <div class="overly">
-                          <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-                          </div>
-                      </div>
-                      </a>
-                  </li>
-                </ul>
-              </div>
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Part Assemblies</h2>
+                        <p>Using CAD to simulate part interactions.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Drawings -->
+                <li class="mix Graphics">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Drawings/Renderings</h2>
+                        <p>To show off our sweet designs.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Structures -->
+                <!-- FEA -->
+                <li class="mix Structures">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work4.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>FEA</h2>
+                        <p>Finite Element Analysis using ANSYS and other tools for wing and fuselage structures.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Flutter -->
+                <li class="mix Structures">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work4.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Flutter</h2>
+                        <p>Working with Aero team to analyse aerodynamic flutter.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Testing -->
+                <li class="mix Structures">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work4.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Structural Testing</h2>
+                        <p>Yield, Fatigue, Failure, etc.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Propulsion -->
+                <!-- Propellers -->
+                <li class="mix Propulsion">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Propellers</h2>
+                        <p>Analysing and choosing propellers for each flight mission.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Motors -->
+                <li class="mix Propulsion">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Motors</h2>
+                        <p>Analysing and choosing a motor.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Electronics -->
+                <li class="mix Propulsion">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Electronics</h2>
+                        <p>Choosing the right speed controller, batteries, etc.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Wind tunnel - 2 -->
+                <li class="mix Propulsion">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Wind Tunnel Testing</h2>
+                        <p>Analysing propulsion system performance in the wind tunnels.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Manufacturing -->
+                <!-- Prototyping -->
+                <li class="mix Manufacturing">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Prototyping</h2>
+                        <p>Working with all the subteams to make prototypes for testing</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Composites -->
+                <li class="mix Manufacturing">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Composites</h2>
+                        <p>Working with composites to build super nice parts.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- CNC -->
+                <li class="mix Manufacturing">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>CNC</h2>
+                        <p>Using Computer Numerical Control to hotwire wing cores,mill molds and prototypes, etc.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- 3D printing -->
+                <li class="mix Manufacturing">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>3D Printing</h2>
+                        <p>Use additive manufacturing for various parts and prototypes.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Laser Cutting -->
+                <li class="mix Manufacturing">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Laser Cutting</h2>
+                        <p>Use laser cutting for lots of prototypes and parts.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Systems -->
+                <!-- Design -->
+                <li class="mix Systems">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>System Design</h2>
+                        <p>Work with all the subteams to make sure all the pieces fit together.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Specialty -->
+                <li class="mix Systems">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Specialty Systems</h2>
+                        <p>Work on the wild card requirements for the year (e.g. bomb drops).</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Piloting -->
+                <!-- Simulation -->
+                <li class="mix Piloting">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Simulator</h2>
+                        <p>Put the design in the simulator for an additional check and practice.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Testing -->
+                <li class="mix Piloting">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Flight Testing</h2>
+                        <p>Over and over and over.</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+                <!-- Fly off -->
+                <li class="mix Piloting">
+                    <a href="#">
+                    <img src="{{ site.baseurl }}/imgportfolio/work5.jpg" alt="">
+                    <div class="overly">
+                        <div class="position-center">
+                        <h2>Fly-off</h2>
+                        <p>Don't mess it up...</p>
+                        </div>
+                    </div>
+                    </a>
+                </li>
+
+              </ul>
             </div>
           </div>
         </div>
+      </div>
     </div>
 </section>
 
