--- a/teams.html
+++ b/teams.html
@@ -337,7 +337,7 @@ permalink: /teams/
                 <!-- Design -->
                 <li class="mix Systems">
                   <a href="#">
-                  <img src="{{ site.baseurl }/imgportfolio/work2.jpg" alt="">
+                  <img src="{{ site.baseurl }}/imgportfolio/work2.jpg" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>System Design</h2>
