--- a/teams.html
+++ b/teams.html
@@ -34,7 +34,7 @@ permalink: /teams/
                     <li class="filter" data-filter=".Propulsion">Propulsion</li>
                     <li class="filter" data-filter=".Manufacturing">Manufacturing</li>
                     <li class="filter" data-filter=".Systems">Systems</li>
-                    <li class="filter" data-filter=".Piloting">Systems</li>
+                    <li class="filter" data-filter=".Piloting">Piloting</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
