try centering the button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ permalink: /
         <div class="block">
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
-            <br>We're always looking for new, talented team members.</p>
-            <a class="btn btn-default btn-call-to-action" href="#" >APPLY NOW!</a>
+              <br>We're always looking for new, talented team members.</p>
+          <a class="btn btn-default btn-call-to-action" href="#" >APPLY NOW!</a>
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@ permalink: /
         <div class="block">
           <h2>We are looking for new team members!</h2>
           <p>If you've liked what you've seen, and you're interested in learning more about joining the DBF Team, click below to fill out a quick application and someone on the team will reach out to you shortly.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >APPLY NOW!</a>
+          <a class="position-center btn btn-default btn-call-to-action" href="#" >APPLY NOW!</a>
         </div>
       </div>
     </div>
