--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
-          <a class="fadeInUp position-center btn btn-default btn-call-to-action animated" href="#" >APPLY NOW!</a>
+          <a class="animated fadeInUp position-center btn btn-default btn-call-to-action-big" href="#" >APPLY NOW!</a>
         </div>
       </div>
     </div>
