--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ permalink: /
       <h2>WE DO IT ALL</h2>
       <p>When we say all aspects of small fixed-wing UAVs, we mean it.  We've got aerodynamics, structures, manufacturing, graphics, propulsion, electronics, systems, piloting, and more!</p>
       <p>With so much going on, it's hard to keep track, which is why we implement a leadership structure that includes a variety of sub teams. Each year we make small modificiations to the overall team structure depending on specific needs and challenges for the year's competition, but overall we keep things in the same few divisions.</p>
-      <p>Take a gander and the various sub team specialties we have on the team, we're sure you'll find something that peaks your interest.</p>
+      <p>Take a gander and the various sub team specialties we have on the team; we're sure you'll find something that peaks your interest.</p>
       <a href="{{ site.baseurl }}/teams" class="btn btn-view-works">View Specialties</a>
     </div>
   </div>
