--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ permalink: /
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
             <div class="col text-center">
-              <button class="fadeInUpBig btn btn-default btn-slider" href="#" >APPLY NOW!</button>
+              <button class="animate fadeInUpBig btn btn-default btn-slider" href="#" >APPLY NOW!</button>
             </div>
         </div>
       </div>
