--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
-            <a class="animated fadeInUp col text-center">
-              <button class="btn btn-default btn-wow" href="#" >APPLY NOW!</button>
-            </a>
+            <div class="col text-center">
+              <button class="animated fadeInUp btn btn-default btn-wow" href="#" >APPLY NOW!</button>
+            </div>
         </div>
       </div>
     </div>
