--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
-              <button class="apply" href="#">APPLY NOW!</button>
+          <mybutton class="apply" href="#">APPLY NOW!</mybutton>
         </div>
       </div>
     </div>
