try a different place

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@ permalink: /
               <br>We're always looking for new, talented team members.</p>
         </div>
       </div>
-      <div class="btn btn-default apply" href="#">APPLY NOW!</div>
     </div>
+    <div class="container">
+        <div class="center">
+            <div class="btn btn-default btn-wow" href="#">APPLY NOW!</div>
+        </div>
+      </div>
   </div>
 </section>
 <!-- Wrapper Start -->
