--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
+          <a class="btn btn-default apply" href="#">APPLY NOW!</a>
         </div>
       </div>
     </div>
-    <div class="container">
-        <div class="center">
-            <div class="btn btn-default btn-wow" href="#">APPLY NOW!</div>
-        </div>
-      </div>
   </div>
 </section>
 <!-- Wrapper Start -->
