add another filler

--- a/teams.html
+++ b/teams.html
@@ -263,7 +263,7 @@ permalink: /teams/
                 <!-- Wind tunnel - 2 -->
                 <li class="mix Propulsion">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/windtunnel2.gif" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Wind Tunnel Testing</h2>
