--- a/teams.html
+++ b/teams.html
@@ -26,7 +26,7 @@ permalink: /teams/
               <div class="portfolio-menu">
                 <ul>
                     <!-- Sub Teams -->
-                    <li class="filter" data-filter="all">Everything</li>
+                    <!-- <li class="filter" data-filter="all">Everything</li> -->
                     <li class="filter" data-filter=".Leadership">Leadership</li>
                     <li class="filter" data-filter=".Aerodynamics">Aerodynamics</li>
                     <li class="filter" data-filter=".Graphics">Graphics</li>
