--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ permalink: /
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="img/PaperAirplane.jpg" alt="Img">
+          <img src="img/PaperAirplaneblur.jpg" alt="Img">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
