--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ permalink: /
 <section id="feature">
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-6" style="background-color:rgba(255,255,255,0.95); padding-bottom: 20px;">
+    <div class="col-md-6 col-md-offset-6" style="background-color:rgba(255,255,255,0.85); border-radius: 5px;padding-bottom: 20px;">
       <h2>WE DO IT ALL</h2>
       <p>When we say all aspects of small fixed-wing UAVs, we mean it.  We've got aerodynamics, structures, manufacturing, graphics, propulsion, electronics, systems, piloting, and more!</p>
       <p>With so much going on, it's hard to keep track, which is why we implement a leadership structure that includes a variety of sub teams. Each year we make small modificiations to the overall team structure depending on specific needs and challenges for the year's competition, but overall we keep things in the same few divisions.</p>
