add a few more images

--- a/teams.html
+++ b/teams.html
@@ -116,7 +116,7 @@ permalink: /teams/
                   <!-- Stability Analysis -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/stability.gif" alt="https://twitter.com/RGally29/status/1165075119959683074">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Stability Analysis</h2>
@@ -324,7 +324,7 @@ permalink: /teams/
                 <!-- Laser Cutting -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/lasercut.gif" alt="https://giphy.com/gifs/adweek-star-wars-kylo-ren-3ohze44HAxBtDMKfXa">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Laser Cutting</h2>
