--- a/teams.html
+++ b/teams.html
@@ -194,7 +194,7 @@ permalink: /teams/
                    <div class="overly">
                      <div class="position-center">
                        <h2>FEA</h2>
-                       <p>Finite Element Analysi       using ANSYS and other tool       for wing and fuselag       structures.</p>
+                       <p>Finite Element Analysis using ANSYS and other tools for wing and fuselag structures.</p>
                      </div>
                    </div>
                    </a>
