--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ permalink: /
           <div class="col-lg-4 col-md-6 text-center">
               <div class="service-box">
                   <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                  <h3>Effetive Teamwork</h3>
+                  <h3>Effective Teamwork</h3>
                   <p class="text-muted">No engineer left behind!</p>
               </div>
           </div>
@@ -69,7 +69,7 @@ permalink: /
               <div class="service-box">
                   <i class="fa fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".2s"></i>
                   <h3>Clear Communication</h3>
-                  <p class="text-muted">Not just for English majors.</p>
+                  <p class="text-muted">Say what you mean, and mean what you say.</p>
               </div>
           </div>
       </div>
