add more filler images

--- a/teams.html
+++ b/teams.html
@@ -92,7 +92,7 @@ permalink: /teams/
                   <!-- Airfoil -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/airfoildesign.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Airfoil Analysis</h2>
@@ -104,7 +104,7 @@ permalink: /teams/
                   <!-- Wing Design -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/wingdesign.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Wing Analysis</h2>
