--- a/teams.html
+++ b/teams.html
@@ -128,7 +128,7 @@ permalink: /teams/
                   <!-- CFD -->
                   <li class="mix Aerodynamics">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                      <img src="{{ site.baseurl }}/img/teams/cfd.gif" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>CFD</h2>
