--- a/teams.html
+++ b/teams.html
@@ -153,7 +153,7 @@ permalink: /teams/
                   <!-- Parts -->
                   <li class="mix Graphics">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/part.gif" alt="https://giphy.com/shesanportfolio">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Part Modeling</h2>
@@ -165,7 +165,7 @@ permalink: /teams/
                   <!-- Assemblies -->
                   <li class="mix Graphics">
                     <a href="#">
-                    <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                    <img src="{{ site.baseurl }}/img/teams/assemblies.gif" alt="https://giphy.com/Spottimetta/">
                     <div class="overly">
                       <div class="position-center">
                         <h2>Part Assemblies</h2>
@@ -177,7 +177,7 @@ permalink: /teams/
                 <!-- Drawings -->
                 <li class="mix Graphics">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/drawings.gif" alt="https://giphy.com/hateplow/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Drawings/Renderings</h2>
