--- a/teams.html
+++ b/teams.html
@@ -190,7 +190,7 @@ permalink: /teams/
                 <!-- FEA -->
                 <li class="mix Structures">
                    <a href="#">
-                   <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                   <img src="{{ site.baseurl }}/img/teams/fea.gif" alt="http://user.engineering.uiowa.edu/~jialu/html/research.html">
                    <div class="overly">
                      <div class="position-center">
                        <h2>FEA</h2>
