add prototyping image

--- a/teams.html
+++ b/teams.html
@@ -276,7 +276,7 @@ permalink: /teams/
                 <!-- Prototyping -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/prototype.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Prototyping</h2>
