add more fillers

--- a/teams.html
+++ b/teams.html
@@ -349,7 +349,7 @@ permalink: /teams/
                 <!-- Specialty -->
                 <li class="mix Systems">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/specialty.gif" alt="https://www.reddit.com/r/oddlysatisfying/comments/442d68/b52_stratofortress_bomb_run/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Specialty Systems</h2>
