add more fillers

--- a/teams.html
+++ b/teams.html
@@ -251,7 +251,7 @@ permalink: /teams/
                 <!-- Electronics -->
                 <li class="mix Propulsion">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/electronics.gif" alt="https://giphy.com/xponentialdesign/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Electronics</h2>
@@ -337,7 +337,7 @@ permalink: /teams/
                 <!-- Design -->
                 <li class="mix Systems">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/systems.gif" alt="https://history.nasa.gov/diagrams/ad004.gif">
                   <div class="overly">
                     <div class="position-center">
                       <h2>System Design</h2>
