add more fillers

--- a/teams.html
+++ b/teams.html
@@ -288,7 +288,7 @@ permalink: /teams/
                 <!-- Composites -->
                 <li class="mix Manufacturing">
                   <a href="#">
-                  <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
+                  <img src="{{ site.baseurl }}/img/teams/composites.jpg" alt="https://www.blendernation.com/2020/04/26/procedural-carbon-fiber-in-blender-2-8/#prettyPhoto/0/">
                   <div class="overly">
                     <div class="position-center">
                       <h2>Composites</h2>
