formalize the language a little

--- a/teams.html
+++ b/teams.html
@@ -11,7 +11,7 @@ permalink: /teams/
             <div class="col-md-12">
                 <div class="block">
                     <h1>Sub-team Specialties</h1>
-                    <p>Take a gander at some of the things our sub-teams do!</p>
+                    <p>Take a look at some of the things our sub-teams do.</p>
                 </div>
             </div>
         </div>
