--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
-          <a class="animated fadeInUpBig btn btn-default btn-wow" href="https://forms.gle/cVSoxY7EwWDKEFbEA">APPLY NOW!</a>
+          <a class="animated fadeInUpBig btn btn-default btn-wow" href="https://forms.gle/cVSoxY7EwWDKEFbEA">APPLY NOW</a>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@ permalink: /
               <div class="service-box">
                   <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
                   <h3>Effective Teamwork</h3>
-                  <p class="text-muted">No engineer left behind!</p>
+                  <p class="text-muted">No engineer left behind.</p>
               </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
@@ -81,9 +81,8 @@ permalink: /
   <div class="row">
     <div class="col-md-6 col-md-offset-6" style="background-color:rgba(255,255,255,0.85); border-radius: 5px;padding-bottom: 20px;">
       <h2>WE DO IT ALL</h2>
-      <p>When we say all aspects of small, fixed-wing UAVs, we mean it.  We've got aerodynamics, structures, manufacturing, graphics, propulsion, electronics, systems, piloting, and more!</p>
-      <p>With so much going on, it's hard to keep track, which is why we implement a leadership structure that includes a variety of sub teams. Each year we make small modificiations to the overall team structure depending on specific needs and challenges for the year's competition, but overall we keep things in the same few divisions.</p>
-      <p>Take a gander and the various sub team specialties we have on the team; we're sure you'll find something that peaks your interest.</p>
+      <p>When we say all aspects of small, fixed-wing UAVs, we mean it. With so much going on, we have implemented a leadership structure that includes a variety of sub teams. Each year we make small modificiations to the overall team structure depending on specific needs and challenges for the year's competition, but overall we keep things in the same few divisions.</p>
+      <p>Follow the link below to check out the various sub-team specialties we have; we're sure you'll find something that peaks your interest.</p>
       <a href="{{ site.baseurl }}/teams" class="btn btn-view-works">View Specialties</a>
     </div>
   </div>
@@ -97,9 +96,9 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We are looking for new team members!</h2>
+          <h2>We are currently recruiting new team members!</h2>
           <p>If you've liked what you've seen, and you're interested in learning more about joining the DBF Team, click below to fill out a quick application and someone on the team will reach out to you shortly.</p>
-          <a class="btn btn-default btn-call-to-action" href="https://forms.gle/cVSoxY7EwWDKEFbEA" >APPLY NOW!</a>
+          <a class="btn btn-default btn-call-to-action" href="https://forms.gle/cVSoxY7EwWDKEFbEA" >APPLY NOW</a>
         </div>
       </div>
     </div>
