--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ permalink: /
       <div class="col-md-12">
         <div class="block">
           <h2>We are currently recruiting new team members!</h2>
-          <p>If you've liked what you've seen, and you're interested in learning more about joining the DBF Team, click below to fill out a quick application and someone on the team will reach out to you shortly.</p>
+          <p>If you've liked what you've seen, and you're interested in learning more about joining the DBF Team, click below to learn how to get more info and/or apply.</p>
           <a class="btn btn-default btn-call-to-action" href="https://forms.gle/cVSoxY7EwWDKEFbEA" >APPLY NOW</a>
         </div>
       </div>
