--- a/members.html
+++ b/members.html
@@ -42,7 +42,7 @@ permalink: /members/
               <li class="mix Leadership">
                 <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -59,7 +59,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -76,7 +76,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -93,7 +93,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -110,7 +110,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -127,7 +127,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -144,7 +144,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -161,7 +161,7 @@ permalink: /members/
               <li class="mix Leadership">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -179,7 +179,7 @@ permalink: /members/
               <li class="mix Aerodynamics">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -197,7 +197,7 @@ permalink: /members/
               <li class="mix Graphics">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -215,7 +215,7 @@ permalink: /members/
               <li class="mix Structures">
                 <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -233,7 +233,7 @@ permalink: /members/
               <li class="mix Propulsion">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -251,7 +251,7 @@ permalink: /members/
               <li class="mix Manufacturing">
                 <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -269,7 +269,7 @@ permalink: /members/
               <li class="mix Systems">
                   <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
@@ -287,7 +287,7 @@ permalink: /members/
               <li class="mix Piloting">
                   <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
-                  <img src="{{ site.baseurl }}/img'blankperson.png" alt="">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
