--- a/teams.html
+++ b/teams.html
@@ -27,7 +27,7 @@ permalink: /teams/
                 <ul>
                     <!-- Sub Teams -->
                     <!-- <li class="filter" data-filter="all">Everything</li> -->
-                    <li class="filter" data-filter=".Leadership">Leadership</li>
+                    <li class="filter active" data-filter=".Leadership">Leadership</li>
                     <li class="filter" data-filter=".Aerodynamics">Aerodynamics</li>
                     <li class="filter" data-filter=".Graphics">Graphics</li>
                     <li class="filter" data-filter=".Structures">Structures</li>
